--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -95,14 +95,13 @@
 //   }
 // }
 //////////////////////////////////////////////////////////////////////////////////
-/// 
-/// 
-
+///
+///
 
 /* styles.css */
 
-.mat-toolbar{
-  background-color: #E0E3E1;
+.mat-toolbar {
+  background-color: #e0e3e1;
 }
 .navbar-container {
   display: flex;
@@ -151,4 +150,3 @@
     display: block;
   }
 }
-
