--- a/src/app/modules/notifications/notifications.component.html
+++ b/src/app/modules/notifications/notifications.component.html
@@ -1,9 +1,14 @@
 <div class="notification-popup">
-    <div *ngIf="message" class="alert">
-        <h4 class="alert-heading">Notification</h4>
-        <p>{{ message }}</p>
-        <button type="button" class="close close-btn" aria-label="Close" (click)="dismissNotification()">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
+  <div *ngIf="message" class="alert">
+    <h4 class="alert-heading">Notification</h4>
+    <p>{{ message }}</p>
+    <button
+      type="button"
+      class="close close-btn"
+      aria-label="Close"
+      (click)="dismissNotification()"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 </div>
