--- a/src/app/modules/transaction-chart/transaction-chart.component.html
+++ b/src/app/modules/transaction-chart/transaction-chart.component.html
@@ -1,14 +1,24 @@
-<body>
+<div class="grid-container">
   <mat-grid-list [cols]="gridColumns" rowHeight="155px">
-    <mat-grid-tile *ngFor="let card of cards" [colspan]="card.cols" [rowspan]="card.rows">
+    <mat-grid-tile
+      *ngFor="let card of cards"
+      [colspan]="card.cols"
+      [rowspan]="card.rows"
+    >
       <mat-card class="dashboard-card">
         <mat-card-content class="dashboard-card-content">
           <div>
             <app-chart *ngIf="card.id === 'doughnut'"></app-chart>
+            <app-barchart *ngIf="card.id === 'barchart'"></app-barchart>
+            <div *ngIf="card.id === 'progress1'">
+              <h3>Limit progress</h3>
+            </div>
+            <div *ngIf="card.id === 'progress2'">
+              <h3>Goals progress</h3>
+            </div>
           </div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
-</body>
-    
+</div>
