--- a/src/app/modules/transaction-chart/transaction-chart.component.scss
+++ b/src/app/modules/transaction-chart/transaction-chart.component.scss
@@ -8,15 +8,14 @@
   left: 15px;
   right: 15px;
   bottom: 15px;
-  margin: 5px;
-  background-color: #E8F3E0;
-  border-radius: 20px;
+  margin: 10px;
+  background-color: #eeefee;
+  border-radius: 15px;
 }
 
-.dashboard-card-content {
-  text-align: left;
-}
-
-body{
-  background-color: #D5E9C6;
+@media screen and (max-width: 560px) {
+  .grid-container {
+    flex-direction: column;
+    min-width: 350px;
+  }
 }
