--- a/src/app/modules/transaction-overview/transaction-overview.component.html
+++ b/src/app/modules/transaction-overview/transaction-overview.component.html
@@ -1,43 +1,81 @@
 <div class="container">
   <div class="filter-container">
     <mat-form-field class="filter-field">
-      <input matInput placeholder="Search ..." [formControl]="searchControl" (input)="applyFilters()">
+      <input
+        matInput
+        placeholder="Search ..."
+        [formControl]="searchControl"
+        (input)="applyFilters()"
+      />
     </mat-form-field>
 
     <mat-form-field class="filter-field">
       <mat-label>Category</mat-label>
-      <mat-select [formControl]="categoriesControl" (selectionChange)="applyFilters()">
-        <mat-option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</mat-option>
+      <mat-select
+        [formControl]="categoriesControl"
+        (selectionChange)="applyFilters()"
+      >
+        <mat-option *ngFor="let category of categories" [value]="category.id">{{
+          category.name
+        }}</mat-option>
       </mat-select>
     </mat-form-field>
 
     <mat-form-field class="filter-field">
       <mat-label>Transaction Type</mat-label>
-      <mat-select [formControl]="transactionTypeControl" (selectionChange)="applyFilters()">
-        <mat-option *ngFor="let transactionType of transactionTypes" [value]="transactionType.id">{{
-          transactionType.type }}</mat-option>
+      <mat-select
+        [formControl]="transactionTypeControl"
+        (selectionChange)="applyFilters()"
+      >
+        <mat-option
+          *ngFor="let transactionType of transactionTypes"
+          [value]="transactionType.id"
+          >{{ transactionType.type }}</mat-option
+        >
       </mat-select>
     </mat-form-field>
 
     <mat-form-field class="filter-field">
-      <input matInput type="number" min="0" placeholder="Min Amount" [formControl]="minAmountControl"
-        (input)="applyFilters()">
+      <input
+        matInput
+        type="number"
+        min="0"
+        placeholder="Min Amount"
+        [formControl]="minAmountControl"
+        (input)="applyFilters()"
+      />
     </mat-form-field>
 
     <mat-form-field class="filter-field">
-      <input matInput type="number" min="0" placeholder="Max Amount" [formControl]="maxAmountControl"
-        (input)="applyFilters()">
+      <input
+        matInput
+        type="number"
+        min="0"
+        placeholder="Max Amount"
+        [formControl]="maxAmountControl"
+        (input)="applyFilters()"
+      />
     </mat-form-field>
 
     <mat-form-field class="filter-field">
-      <input matInput [matDatepicker]="picker" placeholder="Transaction Date" [formControl]="maxDateControl"
-        (dateChange)="applyFilters()" [max]="maxDateControl">
+      <input
+        matInput
+        [matDatepicker]="picker"
+        placeholder="Transaction Date"
+        [formControl]="maxDateControl"
+        (dateChange)="applyFilters()"
+        [max]="maxDateControl"
+      />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   </div>
 
-  <div fxLayout="column" fxLayoutAlign="center center" class="transaction-container">
+  <div
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    class="transaction-container"
+  >
     <mat-card>
       <mat-card-header class="transaction-label">Transactions</mat-card-header>
       <mat-card-content>
@@ -56,19 +94,41 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let transaction of transactions; let i = index" class="transaction-item">
+              <tr
+                *ngFor="let transaction of transactions; let i = index"
+                class="transaction-item"
+              >
                 <td>{{ transaction.createdAt }}</td>
-                <td>{{ transaction.categoryId || 'N/A' }}</td>
-                <td>{{ transaction.purpose || 'N/A' }}</td>
-                <td [style.color]="getAmountColorByTransactionType(transaction.typeId)">
-                  {{ getAmountWithSignAndColor(transaction.amount, transaction.typeId) || 'N/A' }}
+                <td>{{ transaction.categoryId || "N/A" }}</td>
+                <td>{{ transaction.purpose || "N/A" }}</td>
+                <td
+                  [style.color]="
+                    getAmountColorByTransactionType(transaction.typeId)
+                  "
+                >
+                  {{
+                    getAmountWithSignAndColor(
+                      transaction.amount,
+                      transaction.typeId
+                    ) || "N/A"
+                  }}
                 </td>
                 <td>
                   <div class="action-buttons">
-                    <button mat-icon-button color="primary" type="button" (click)="deleteTransaction(transaction.id)">
+                    <button
+                      mat-icon-button
+                      color="primary"
+                      type="button"
+                      (click)="deleteTransaction(transaction.id)"
+                    >
                       <mat-icon>delete</mat-icon>
                     </button>
-                    <button mat-icon-button color="primary" type="button" (click)="editTransaction(transaction.id)">
+                    <button
+                      mat-icon-button
+                      color="primary"
+                      type="button"
+                      (click)="editTransaction(transaction.id)"
+                    >
                       <mat-icon>edit</mat-icon>
                     </button>
                   </div>
@@ -77,7 +137,10 @@
             </tbody>
           </table>
         </form>
-        <div *ngIf="filteredTransactions.length === 0" class="empty-list-message">
+        <div
+          *ngIf="filteredTransactions.length === 0"
+          class="empty-list-message"
+        >
           No transactions available.
         </div>
       </mat-card-content>
