--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,27 +2,41 @@
   <div class="navbar-container">
     <div class="app-title">PennyGuard</div>
     <div class="navbar-items" [class.show-menu]="showMenu">
-      <button *ngIf="!isLoggedIn()" mat-button routerLink="/startpage">Главная</button>
-      <button *ngIf="!isLoggedIn()" mat-button routerLink="/login">Войти</button>
+      <button *ngIf="!isLoggedIn()" mat-button routerLink="/startpage">
+        Главная
+      </button>
+      <button *ngIf="!isLoggedIn()" mat-button routerLink="/login">
+        Войти
+      </button>
       <ng-container *ngIf="isLoggedIn()">
         <button mat-button routerLink="/dashboard">Dashboard</button>
         <div class="dropdown">
-          <button mat-button [matMenuTriggerFor]="transactionMenu">Транзакции</button>
+          <button mat-button [matMenuTriggerFor]="transactionMenu">
+            Транзакции
+          </button>
           <mat-menu #transactionMenu="matMenu">
             <button mat-menu-item routerLink="/transaction">Создать</button>
-            <button mat-menu-item routerLink="/upload">Загрузить из банка</button>
-            <button mat-menu-item routerLink="/transaction-overview">Транзакции</button>
-            <button mat-menu-item routerLink="/transaction-chart">Анализ</button>
+            <button mat-menu-item routerLink="/upload">
+              Загрузить из банка
+            </button>
+            <button mat-menu-item routerLink="/transaction-overview">
+              Транзакции
+            </button>
+            <button mat-menu-item routerLink="/transaction-chart">
+              Анализ
+            </button>
           </mat-menu>
         </div>
         <div class="dropdown">
           <button mat-button [matMenuTriggerFor]="limitMenu">Лимиты</button>
           <mat-menu #limitMenu="matMenu">
             <button mat-menu-item routerLink="/limit-form">Создать</button>
-            <button mat-menu-item routerLink="/limit-overview">Лимиты</button>     
+            <button mat-menu-item routerLink="/limit-overview">Лимиты</button>
           </mat-menu>
         </div>
-        <button mat-button routerLink="/notifications-overview">Напоминания</button>
+        <button mat-button routerLink="/notifications-overview">
+          Напоминания
+        </button>
         <a mat-button (click)="logout()">Выход</a>
       </ng-container>
     </div>
